<resources>
    <string name="app_name">Smart Pay</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation menu items-->
    <string name="nav_home">Home</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_users">Users</string>
    <string name="nav_settings">Settings</string>

    <string name="menu_title">Settings</string>

    <!-- Fragment Texts -->
    <string name="hello_blank_fragment">Please enter your PIN</string>


    <string name="title_activity_paypal_set_up">Paypal Set Up</string>
    <string name="Enter_paypal_email_address">Enter paypal email address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="hello_world">Hello world!</string>
    <string name="warning_delete">Are you sure you want to delete this user?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_viewUsers">View Users</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="title_activity_credit_card_details">CreditCardDetailsActivity</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_edit_user">Edit User</string>
    <string name="title_activity_splach_screen">Smart Pay</string>
    <string name="title_activity_login">Login</string>
</resources>
