<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="34dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="34dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity"
    android:orientation="vertical"
    android:background="#000"
    >

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="19dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtxtUserName"
        android:textColor="#fff"
        />
    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="19dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtxtUserPass"
        android:textColor="#fff"
        />

    <TextView
        android:text="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="19dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtxtUserConfirmPass"
        android:textColor="#fff"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Role"
        android:id="@+id/btnSetRole"
        android:background="#303F9F"
        android:textColor="#fff"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/btnCancel"
            android:background="#000"
            android:textColor="#3366f3"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:id="@+id/btnOk"
            android:background="#000"
            android:textColor="#3366f3"
            />
    </LinearLayout>

</LinearLayout>
